# baskstat

./: .gitignore  autogen.sh  configure.ac
data/: Makefile.am  baskstat.desktop
data/ui/: baskstat-menu-ui.xml
po/: POTFILES.in  es.po
src/: Makefile.am  baskstat-court.c  baskstat-court.h  baskstat-player.c  baskstat-player.h  baskstat-team.c  baskstat-team.h  baskstat-timer.c  baskstat-timer.h  baskstat-window.c  baskstat-window.h  main.c
